tests/sksl/errors/ConstructorTypeMismatch.glsl
### Compilation failed:

error: 5: expected 'int', but found 'float2x2'
error: 6: invalid argument to 'float' constructor (expected a number or bool, but found 'Foo')
error: 7: 'Foo' is not a valid parameter to 'float2' constructor
error: 8: 'Foo' is not a valid parameter to 'float2x2' constructor
error: 9: '<INVALID>' is not a valid parameter to 'float2x2' constructor
error: 10: '<INVALID>' is not a valid parameter to 'float2x2' constructor
6 errors
